fix: small docs fixes
